--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "good": "^6.4.0",
+    "good-console": "^5.1.0",
     "hapi": "^11.0.2",
     "inert": "^3.1.0"
   }
